Bug 165720 - Shift+Ins doesn't work in embedded terminal in Dolphin
Summary: Shift+Ins doesn't work in embedded terminal in Dolphin
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: kpart (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 281886 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-07-04 15:53 UTC by Mikko C.
Modified: 2011-10-21 04:00 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mikko C. 2008-07-04 15:53:38 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc-4.3.1 
OS:                Linux

I use Shift+Insert to paste links, text, stuff, etc.

This worked correctly months ago: I don't remember when exactly it stopped working.

If I want to paste something into the embedded Dolphin terminal, I can't.
It pastes this instead: "2~"
It works fine with Konsole and Yakuake!!
It also works if I use Ctrl+Shift+V, but not with Shift+Insert.
Comment 1 Mikko C. 2008-07-04 15:54:35 UTC
meh, I meant "Shift", not "shit", sorry!!
Comment 2 Peter Penz 2008-07-04 17:19:27 UTC
@Robert: I did not analyze this issue yet; do you have a rough idea whether this might be an issue in konsole itself? Thanks!
Comment 3 Dario Andres 2008-07-19 21:40:06 UTC
I can reproduce this Dolphin bug (KDE 4.0.98 - ArchLinux)

Shift+Insert pastes "2~"
Ctrl+Shift+Instert pastes the clipboard text
Comment 4 Dario Andres 2008-07-19 22:31:46 UTC
In KDE 4.0.99 (ArchLinux) the behaviour is the same as I mentioned above
Comment 5 Dario Andres 2008-07-29 16:55:51 UTC
I can reconfirm this in Version 4.1.00 (KDE 4.1.0) (KDEmod) in ArchLinux i686
Comment 6 Dario Andres 2008-08-19 17:55:05 UTC
I can also reproduce this bug with:
Version 4.1.62 (KDE 4.1.62 (KDE 4.2 >= 20080814))
kdelibs4.2 svn rev.849324
kdebase4.2 svn rev.849337
ArchLinux 2.6.25-zen2-20080814 i686 
Comment 7 Mikko C. 2008-10-28 13:13:37 UTC
Still valid with today's trunk
Comment 8 Dario Andres 2008-11-29 20:45:55 UTC
This bug is still present in KDE4.1.3 and KDE4.2svn (kdebase rev.890056 / kdelibs rev.890034), here in my ArchLinux x86_64 box.
Comment 9 Mikko C. 2008-11-29 22:29:06 UTC
it's also still present in today's trunk.
Comment 10 kujub 2009-01-29 16:28:56 UTC
This is also still present in KDE4.2.0 on ArchLinux 686
Comment 11 kujub 2009-01-30 20:34:41 UTC
I can also reproduce this in the embedded konsole in 
kate Version 3.2.0 Using KDE 4.2.00 (KDE 4.2.0).
So this seems not to be a dolphin specific bug.
Comment 12 Andy 2009-02-18 20:05:44 UTC
Still present in KDE 4.2.63 (KDE 4.3 >= 20090212) on openSUSE 11.1.

OK in:
- Konsole 2.2
- Yakuake 2.9.4
Bug in:
- Dolphin 1.2.80 - terminal panel
- Kate 3.2.63 - terminal tool view
Comment 13 Mikko C. 2009-09-11 12:06:10 UTC
Still valid in 4.4 trunk :(
Comment 14 Mark 2010-09-19 03:12:47 UTC
Confirmed for 4.5.1 and trunk.

Peter, can you provide any suggestions on how to fix this issue?
Comment 15 Peter Penz 2010-09-23 10:27:06 UTC
@Mark: I did not analyse the issue in detail, but I guess the root-cause is related to the integrated konsole-part (the shortcut is forwarded to the konsole, but shows wrong results in my environment).
Comment 16 Jekyll Wu 2011-07-08 19:21:34 UTC
confirmed for kde-4.6.90
Comment 17 Jekyll Wu 2011-09-22 07:42:42 UTC
*** Bug 281886 has been marked as a duplicate of this bug. ***
Comment 18 Jekyll Wu 2011-10-21 04:00:12 UTC
Git commit 7867aec8857ada3c60f3cd71bda8b8ed2968433f by Jekyll Wu.
Committed on 21/10/2011 at 05:52.
Pushed by jekyllwu into branch 'master'.

Make it possible to intercept "Shift+Insert" as shortcut in kpart

BUG: 165720
FIXED-IN:4.8
REVIEW:102924

M  +10   -0    src/Part.cpp

http://commits.kde.org/konsole/7867aec8857ada3c60f3cd71bda8b8ed2968433f