Make it possible to intercept "Shift+Insert" as shortcut in kpart

BUG: 165720
FIXED-IN:4.8
REVIEW:102924